# Webots

./: ReadMe.txt
codice/: README.txt  my_controller.cpp
codice_cpp/: my_controller_prob3.cpp
modifiche_bashrc/: info_bashrc.txt
ros2_workspace/: ReadMe.txt
ros2_workspace/src/packcpp/: CMakeLists.txt  package.xml
ros2_workspace/src/packcpp/launch/: prob_webots.launch  webots.launch
ros2_workspace/src/packcpp/src/: robot_cpp.cpp
ros2_workspace/src/packcpp/worlds/: .p-rob3.wbproj  p-rob3.wbt
ros2_workspace/src/prob3_pack/: package.xml  setup.cfg  setup.py
ros2_workspace/src/prob3_pack/launch/: prob_launch.py
ros2_workspace/src/prob3_pack/prob3_pack/: prob3_driver.py
ros2_workspace/src/prob3_pack/resource/: my_robot.urdf
ros2_workspace/src/prob3_pack/worlds/: .p-rob3.wbproj
